gitops/apps/grocy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
      - name: grocy
        image: linuxserver/grocy:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /config
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "250m"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grocy-data
