gitops/apps/grocy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: grocy
